tests/sksl/errors/VoidVariable.glsl
### Compilation failed:

error: 5: opaque type 'void' cannot use initializer expressions
1 error
